--- a/_site.yml
+++ b/_site.yml
@@ -2,11 +2,12 @@ name: "rforbiochemists.github.io"
 title: "R for Biochemists"
 description: |
   R for Biochemists
-output_dir: "_site"
+output_dir: "docs"
 navbar:
   right:
     - text: "Home"
       href: index.html
     - text: "About"
       href: about.html
+  source_url: https://github.com/rforbiochemists/rforbiochemists.github.io
 output: distill::distill_article
